# secure-web-application

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  mkdocs.yml  prompt.md
.claude/: README.md
.claude/scripts/: approve-pr.sh  create-pr.sh  merge-pr.sh  pr-status.sh  review-tasks.sh
.cursor/rules/: linear-naming.mdc
.docs/: README.md
.docs/architecture-decisions/: 001-k3s-over-docker.md  002-alpine-over-distroless.md  003-multi-cluster-topology.md  004-headlamp-rancher-management.md
.docs/context/: how-specs-work.md  project-overview.md
.docs/workflows/: pr-workflow.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_plugin.md
.github/workflows/: ai-code-review.yml  ci.yml  codeql.yml  docs-quality.yml  gui-e2e.yml  label.yml  mermaid-validate.yml  pages.yml  pr-spec-check.yml  reviewdog-clippy.yml  security-audit.yml  semantic-pr-title.yml
crates/agent/: Cargo.toml  build.rs
crates/agent/src/: main.rs
crates/controller/: Cargo.toml  build.rs
crates/controller/src/: config.rs  db.rs  grpc.rs  main.rs  server.rs  tls.rs
crates/shared/: Cargo.toml
deploy/: README.md
deploy/docker/: Dockerfile  docker-compose.yml
deploy/nftables/: allow-10443.nft  apply.sh
docs/: CNAME  INDEX.md  ROADMAP.md  SPEC_STANDARDS.md  plugin_abi.md  protocol.md
docs/agent/: isolation_apply_spec.md
docs/audit/: audit_log_chain_spec.md
docs/data/: retention_partitioning_spec.md
docs/deploy/: k3s_infrastructure_spec.md  single_image_spec.md
docs/development/: phase1_kickoff.md
docs/implementation/: auth_store_scaffolding_plan.md  event_ingestion_sse_plan.md  ssr_routes_csrf_plan.md
docs/linear/: README.md  field_mapping.md  naming_conventions.md  task_template.md  timing_classification.md
docs/logging/: diagnostics_hints_spec.md  graphing_spec.md  live_transport_spec.md  streaming_classification_spec.md  ui_spec.md
docs/network/: site_gateway_spec.md
docs/ops/: code_review_bots_spec.md  gui_llm_test_orchestration_spec.md  gui_llm_test_orchestration_usage.md  linear_setup.md  llm_delivery_timing_ordering_model.json  llm_delivery_timing_ordering_spec.md  mcp_server.md  observability_metrics_spec.md  runbooks_rotation_spec.md  supply_chain_release_spec.md  upgrades_spec.md
docs/plugins/: apparmor_ui_spec.md  clamav_ui_spec.md  coraza_ui_spec.md  falco_ui_spec.md  nftables_ui_spec.md  packaging_signing_spec.md  plugin_install_registry_ui_spec.md  schema_registry_spec.md
docs/security/: auth_store_spec.md  default_rate_limits_spec.md  error_rate_limit_spec.md  honey_endpoints_alerting_spec.md  pki_enrollment_spec.md  rbac_matrix_spec.md  rbac_tenancy_rls_spec.md  routing_obfuscation_spec.md  (+2 more)
migrations/: 0001_init.sql  0002_events.sql
site/: architecture.md  features.md  getting-started.md  index.md
(+40 files in other folders)
