[workspace]
members = [
    "crates/controller",
    "crates/agent",
    "crates/shared",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "deny"
unused_imports = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
