[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
hyper = { version = "1", features = ["http2"] }
rustls = "0.22"
tokio-rustls = "0.25"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
shared = { path = "../shared" }
