[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["http2"] }
hyper = { version = "1", features = ["http2"] }
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio", "service"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rustls = "0.23"
tokio-rustls = "0.25"
rustls-pemfile = "2"
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
shared = { path = "../shared" }
http = "1"
